--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^6.0.8",
     "path": "^0.12.7"
   },
   "engines": {
